--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .form-control-dark {
   border-color: var(--bs-gray);
 }
@@ -12,4 +18,11 @@
 
 .dropdown-toggle {
   outline: 0;
+}
+
+body {
+  background-color: #fafafa;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: rgb(247, 211, 211);
 }
