--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,30 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.form-control-dark {
-  border-color: var(--bs-gray);
-}
-.form-control-dark:focus {
-  border-color: #fff;
-  box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.25);
-}
-
-.text-small {
-  font-size: 85%;
-}
-
-.dropdown-toggle {
-  outline: 0;
-}
-
-body {
-  background-color: #fafafa;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: rgb(247, 211, 211);
+.ag-theme-alpine {
+	/* bright green, 10% opacity */
+	--ag-selected-row-background-color: rgba(0, 255, 0, 0.6);
+	--ag-odd-row-background-color: #f3f3f3;
 }
