--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,5 +1,35 @@
 .ag-theme-alpine {
-	/* bright green, 10% opacity */
-	--ag-selected-row-background-color: rgba(0, 255, 0, 0.6);
-	--ag-odd-row-background-color: #f3f3f3;
+  /* bright green, 10% opacity */
+  --ag-selected-row-background-color: rgba(0, 255, 0, 0.6);
+  --ag-odd-row-background-color: #f3f3f3;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  /* --clr-primary-100: #f8ede3;
+  --clr-primary-200: #dfd3c3;
+  --clr-primary-300: #d0b8a8;
+  --clr-primary-400: #85586f; */
+  --clr-primary-100: #f9f7f7;
+  --clr-primary-200: #dbe2ef;
+  --clr-primary-300: #3f72af;
+  --clr-primary-400: #112d4e;
+  --clr-white: #fff;
+  --clr-black: #222;
+  --transition: all 0.3s linear;
+  --spacing: 0.1rem;
+  --radius: 0.25rem;
+  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+
+body {
+  background-color: var(--clr-primary-300);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
