--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -19,6 +19,7 @@
   --clr-primary-200: #dbe2ef;
   --clr-primary-300: #3f72af;
   --clr-primary-400: #112d4e;
+  --clr-primary-500: #0b3e6d;
   --clr-white: #fff;
   --clr-black: #222;
   --transition: all 0.3s linear;
@@ -29,7 +30,7 @@
 }
 
 body {
-  background-color: var(--clr-primary-300);
+  background-color: var(--clr-primary-200);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
