--- a/frontend/src/components/code/Chatgpt.css
+++ b/frontend/src/components/code/Chatgpt.css
@@ -1,63 +1,66 @@
 .chat-input {
-	display: flex;
+  display: flex;
+  align-self: flex-start;
+  flex-grow: 1;
 }
 
 .chat-input input {
-	flex-grow: 1;
+  flex-grow: 1;
 }
 .chat-input button {
-	margin-left: 2px;
+  margin-left: 2px;
 }
 
 .container {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	height: 90vh;
-	width: 100%;
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: space-between;
+  height: 90vh;
+  width: 100%;
+  margin-top: 2rem;
 }
 
 .chats {
-	padding: 3px;
-	overflow-y: scroll;
-	display: flex;
-	flex-direction: column;
+  padding: 3px;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
 }
 .avtar {
-	height: 40px;
-	margin: 5px 10px 0px 0px;
-	border-radius: 50%;
-	border: 1px solid rgb(211, 203, 203);
-	padding: 2px;
-	background-color: rgb(228, 221, 181);
+  height: 40px;
+  margin: 5px 10px 0px 0px;
+  border-radius: 50%;
+  border: 1px solid rgb(211, 203, 203);
+  padding: 2px;
+  background-color: rgb(228, 221, 181);
 }
 
 .chat {
-	display: flex;
-	border-radius: 10px;
-	padding: 10px;
-	margin-top: 10px;
-	width: 90%;
+  display: flex;
+  border-radius: 10px;
+  padding: 10px;
+  margin-top: 10px;
+  width: 90%;
 }
 .chat p {
-	flex-grow: 1;
+  flex-grow: 1;
 }
 
 .send .avtar {
-	order: 1;
+  order: 1;
 }
 .recieve .avtar {
-	order: 0;
+  order: 0;
 }
 
 .send {
-	align-self: flex-end;
-	background-color: rgb(245, 242, 214);
+  align-self: flex-end;
+  background-color: rgb(245, 242, 214);
 }
 .recieve {
-	background-color: rgb(220, 240, 243);
+  background-color: rgb(220, 240, 243);
 }
 
 .message-text {
-	margin: 1px;
+  margin: 1px;
 }
