--- a/frontend/src/components/operate/styles.css
+++ b/frontend/src/components/operate/styles.css
@@ -20,6 +20,8 @@
   --clr-primary-300: #3f72af;
   --clr-primary-400: #112d4e;
   --clr-primary-500: #0b3e6d;
+  --clr-primary-600: #72bbd8;
+
   --clr-white: #fff;
   --clr-black: #222;
   --transition: all 0.3s linear;
